--- a/LaTeX_diplomaterv/chapter5.tex
+++ b/LaTeX_diplomaterv/chapter5.tex
@@ -61,6 +61,8 @@ random módon két ember crudol és le kell mérni , hogy mennyire valószínű,
 %----------------------------------------------------------------------------
 Derp.
 
+A deep watching teljesitmenyelemzése
+
 %----------------------------------------------------------------------------
 \section{Webszerver teljesítményelemzés}
 %----------------------------------------------------------------------------
