--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -95,4 +95,23 @@ Derp.
 A MEAN, a MongoDB, Express.JS, Angular.JS, Node.JS technológiáknak a rövidítése, és a lényege az, hogy adatbázisban, szerver oldalon és kliens oldalon végig JSON objektumokkal dolgozunk ráadásul nincs is szükség még más keretrendszerre weblapok készítéséhez, egy egy úgynevezett ``full-stack''. A MEAN előnye az, hogy a kölönböző rétegekre specializált fejlesztők akik egy ilyen fejlesztésen dolgoznak könnyebben megértik a többi réteg kódját, hiszen Javascript nyelven történik mindhárom fejlesztés. 
 
 
+\section{Felhasznált eszközök}
+
+jetbrains webstorm
+
+debugging:
+
+chrome developer toolbar - debugger
+
+node-inspector
+
+webstorm
+
+latex
+
+git
+
+lucidcharts az abrakhoz
+
+
 
