--- a/LaTeX_diplomaterv/src/mark.tex
+++ b/LaTeX_diplomaterv/src/mark.tex
@@ -18,7 +18,7 @@ Az ábrán látszik, hogy szoba váltáskor a szerveroldal minden résztvevőjé
 
 A socket azonosítókhoz színeket lehet nagyon egyszerűen rendelni úgy, hogy md5 hash-t számoltatok az azonosítóból és így egy hexadecimális értéket kapok. Ennek elég 6 betűjét venni és már megvan egy -- nagy valószínűséggel -- egyedi szín, legalábbis egy megnyitott diagramon belül.
 
-\pdfcomment[icon=Note]{insert: kep a jelolesrol }
+Ez a jelölés a ~\ref{fig:entitydir} ábrán is látszik. 
 
 A jelöléseket egy kulcs-érték objektum tartalmazza, a kulcs az entitás azonosító, az érték az felhasználó színazonosítója. Ez a reláció irány azért hasznos, mert az entitás direktíva közvetlenül tud erre a színre hivatkozni:
 
