--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -2,9 +2,15 @@
 \chapter{Az elvégzett munka}
 %----------------------------------------------------------------------------
 
+\pdfcomment[icon=Note]{insert: ide kell valami}
+
+
+
 %----------------------------------------------------------------------------
 \section{Rendszerterv}
 %----------------------------------------------------------------------------
+
+\pdfcomment[icon=Note]{insert: ide kell valami}
 
 \input{src/goal}
 
