--- a/LaTeX_diplomaterv/chapter1.tex
+++ b/LaTeX_diplomaterv/chapter1.tex
@@ -1,10 +1,8 @@
 %----------------------------------------------------------------------------
 \chapter{Webes vizuális dokumentumszerkesztők}
 %----------------------------------------------------------------------------
-(2-3 oldal) 
 
-A Web2.0 világában, amikor a weboldalak továbbfejlődtek az egyszerű statikus tartalom szintjéről elszaporodtak a böngészőben futó alkalmazások. Egy webes dokumentumszerkesztő alatt a böngészőben futó irodai jellegű dokumentum szerkesztőt értjük, az alkalmazás szolgáltatása Saas (Software as a Service) módszerrel történik, amelynél a szoftver és az adatok központilag vannak tárolva és interneten keresztül érhetők el. Manapság a nagyobb szoftvercégeknek a központi stratégiájává vált a SaaS. 
-\pdfcomment[icon=Note]{http://peterlaird.blogspot.hu/2008/06/how-oracle-ibm-sap-microsoft-and-intuit.html}
+A Web2.0 világában, amikor a weboldalak továbbfejlődtek az egyszerű statikus tartalom szintjéről elszaporodtak a böngészőben futó alkalmazások. Egy webes dokumentumszerkesztő alatt a böngészőben futó irodai jellegű dokumentum szerkesztőt értjük, az alkalmazás szolgáltatása Saas (Software as a Service) módszerrel történik, amelynél a szoftver és az adatok központilag vannak tárolva és interneten keresztül érhetők el. Manapság a nagyobb szoftvercégeknek a központi stratégiájává vált a SaaS\cite{Saasref}.
 
 \section{Történet}
 
@@ -14,7 +12,7 @@ A Web2.0 világában, amikor a weboldalak továbbfejlődtek az egyszerű statiku
 
 1999-ben XMLHttpRequest API elérhető volt Internet Explorer 5-ben, lehetséges volt kliens oldalról Javascript kódból egy kérést indítani, ami XML-t kért le a szervertől, majd feldolgozta azt.
 
-2005-ben az AJAX -- Asynchronous Javascript and XML -- fogalom megjelent \pdfcomment[icon=Note]{https://web.archive.org/web/20080702075113/http://www.adaptivepath.com/ideas/essays/archives/000385.php} és ebben az időben Google-nek a Gmail alkalmazásának  funkcionalitása már egyre nagyobb része AJAX alapú volt.
+2005-ben az AJAX -- Asynchronous Javascript and XML -- fogalom megjelent \cite{ajax} és ebben az időben Google-nek a Gmail alkalmazásának  funkcionalitása már egyre nagyobb része AJAX alapú volt.
 
 2011-ben érett meg a HTML5, ami multimédia lehetőségeket biztosít a böngészőben plugin-ok nélkül, példáúl video tartalom lejátszására már natív módon van lehetőség. HTML5 Canvas segítségével gazdag két dimenziós grafikus felületek alakíthatók ki. 
 
@@ -37,14 +35,6 @@ Egyre kevésbé próbléma, de sokszor nem biztosított az állandó internetkap
 
 
 
-\section{Kihívások}
-
-
-
-%----------------------------------------------------------------------------
-\section{Kollaboratív alkalmazások}
-%----------------------------------------------------------------------------
-Derp.
 
 
 
