--- a/LaTeX_diplomaterv/diploma.tex
+++ b/LaTeX_diplomaterv/diploma.tex
@@ -23,6 +23,8 @@
 \usepackage{hyperref}
 \usepackage{courier}
 \usepackage[author={Endre}]{pdfcomment}
+\usepackage{float}
+\restylefloat{table}
 
 
 %--------------------------------------------------------------------------------------
@@ -162,7 +164,7 @@ aboveskip=10pt}
 \include{chapter4}
 \include{chapter5}
 \include{chapter6}
-\include{acknowledgement}
+%\include{acknowledgement}
 
 %\listoffigures\addcontentsline{toc}{chapter}{Ábrák jegyzéke}
 %\listoftables\addcontentsline{toc}{chapter}{Táblázatok jegyzéke}
