--- a/LaTeX_diplomaterv/introduction.tex
+++ b/LaTeX_diplomaterv/introduction.tex
@@ -2,7 +2,29 @@
 \chapter*{Bevezető}\addcontentsline{toc}{chapter}{Bevezető}
 %----------------------------------------------------------------------------
 
-A bevezetõ tartalmazza a diplomaterv-kiírás elemzését, történelmi elõzményeit, a feladat indokoltságát (a motiváció leírását), az eddigi megoldásokat, és ennek tükrében a hallgató megoldásának összefoglalását.
+Néhány éve foglalkozom Python alapú webfejlesztéssel és munkám során mindig is esztétikusnak tartottam egy könnyen használható de erős keretrendszert. A tapasztalataim elején mindig is óvakodtam a kliensoldali webfejlesztéstől, mert bárhogy csináltam, a jQuery alapú kliensoldali logika a végén sohasem lett olyan szép, mint amire büszke lehetnék. Mire a Javascript tudásom utolérte a Python tudásomat, elburjánoztak a kliensoldali Javascript keretrendszerek amik lehetővé teszik, hogy kliensoldalon is moduláris, tesztelhető és újrafelhasználható megoldásokat alkalmazzak.
 
-A bevezetõ szokás szerint a diplomaterv felépítésével záródik, azaz annak rövid leírásával, hogy melyik fejezet mivel foglalkozik.
+A webes modell szerkesztőkre akkor figyeltem fel, amikor a tanulmányaim során a sokadik diagramot kellett megrajzolnom és az akkori Linux rendszeremre nem találtam kielégítő minőségű diagram szerkesztőt. Találtam helyette a Lucidcharts webes eszközt, ami minden akkori próblémát megoldott számomra, ami a diagramszerkesztést illeti.
 
+A vizuális programozásnak az az aspektusa ragadott meg, hogy vannak próblémák amikre egy gráf jellegű megoldás rugalmasabb és átláthatóbb mint a hagyományos kód alapú megoldás és a munkám során próbáltam arra figyelni, hogy olyan vizuális eszközt hozzak létre ami könnyebben old meg próblémákat.
+
+Az MSc szakdolgozatom keretein belül a következőkre terjedt ki a munkám:
+\begin{enumerate}
+\item Vizuális programozási nyelvek áttekintése és egy vizuális programozási nyelv elkészítése,
+\item a kollaboratív diagramszerkesztés megvalósítása, amivel egyidőben több felhasználó tudja ugyanazt a dokumentumot szerkeszteni,
+\item a szerveroldali alkalmazás elkészítése, ami perzisztálja az adatokat és támogatja a valósidejű kollaboratív szerkesztést,
+\item a HTML5 alapú gráfszerkesztő alkalmazás elkészítése,
+\item a megoldáshoz használt technológiák bemutatása, 
+\item a megoldás értékelése teljesítmény és skálázhatóság szempontjából.
+\end{enumerate}
+
+\clearpage
+A fejezetek felépítése a következő:
+
+\begin{enumerate}
+\item Az első fejezet a webalkalmazásoknak egy rövid áttekintése, 
+\item a második fejezet létező webes diagramszerkesztő, webes programfejlesztő és vizuális programozási nyelveket vizsgál,
+\item a harmadik fejezet a kiválasztott technológiákat mutatja be,
+\item a negyedik fejezet az elkészült alkalmazás felépítését részletezi mind a szerveroldal és kliensoldali funkciókra kitérve,
+\item az ötödik fejezet az alkalmazás teljesítményelemzését mutatja be.
+\end{enumerate}
