--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -30,3 +30,50 @@
   note = {Accessed: 2013-11-01}
 }
 
+@misc{Saasref,
+  author= "Peter Laird",
+  title = {How Oracle, IBM, SAP, Microsoft, and Intuit are Responding to the SaaS Revolution},
+  year = 2008,
+  howpublished = {\url{http://peterlaird.blogspot.hu/2008/06/how-oracle-ibm-sap-microsoft-and-intuit.html}},
+  note = {Accessed: 2013-12-01}
+}
+
+@misc{ajax,
+  author= "Jesse James Garrett",
+  title = {Ajax: A New Approach to Web Applications},
+  year = 2005,
+  howpublished = {\url{https://web.archive.org/web/20080702075113/http://www.adaptivepath.com/ideas/essays/archives/000385.php}},
+  note = {Accessed: 2013-12-01}
+}
+@misc{lucidref,
+  author= "Kevin Purdy",
+  title = {LucidChart Makes Stripped-Down Flowcharts for Free},
+  year = 2008,
+  howpublished = {\url{http://lifehacker.com/5112133/lucidchart-makes-stripped+down-flowcharts-for-free}},
+  note = {Accessed: 2013-11-15}
+}
+
+@misc{googcoll1,
+  author= "John Day-Richter",
+  title = {What’s different about the new Google Docs: Working together, even apart},
+  year = 2010,
+  howpublished = {\url{http://googledocs.blogspot.hu/2010/09/whats-different-about-new-google-docs.html}},
+  note = {Accessed: 2013-11-15}
+}
+
+@misc{googcoll2,
+  author= "John Day-Richter",
+  title = {What’s different about the new Google Docs: Conflict resolution},
+  year = 2010,
+  howpublished = {\url{http://googledocs.blogspot.hu/2010/09/whats-different-about-new-google-docs_22.html}},
+  note = {Accessed: 2013-11-15}
+}
+
+@misc{blocklyref,
+  author= "Neil Fraser",
+  title = {Blockly FAQ - High Level},
+  year = 2013,
+  howpublished = {\url{https://code.google.com/p/blockly/wiki/FAQHighLevel}},
+  note = {Accessed: 2013-11-15}
+}
+
