--- a/LaTeX_diplomaterv/src/compile.tex
+++ b/LaTeX_diplomaterv/src/compile.tex
@@ -82,7 +82,7 @@ target
 
 Természetesen nem csak Javascript kódot lehet generáltatni az alkalmazásban, hiszen a template behelyettesítés eredménye egyszerű szöveg. 
 
-
+Az állapotgép nyelvhez tartozó template , egy példa állapotdiagram és a generált kód megtekinthető a második függelékben.
 
 
 
