--- a/LaTeX_diplomaterv/abstract.tex
+++ b/LaTeX_diplomaterv/abstract.tex
@@ -3,7 +3,14 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-Jelen dokumentum egy diplomaterv sablon, amely formai keretet ad a BME Villamosmérnöki és Informatikai Karán végzõ hallgatók által elkészítendõ szakdolgozatnak és diplomatervnek. A sablon használata opcionális. Ez a sablon \LaTeX~alapú, a \emph{TeXLive} \TeX-implementációval és a PDF-\LaTeX~fordítóval mûködõképes.
+Napjainkban a böngészőben futó webalkalmazások már sok teret hódítottak helyettesítve az asztali alkalmazásokat, hiszen könnyebb a telepítésük, nem kell tárhellyel spórolni és a felhőalapú megoldások bizonyos értelemben biztonságban helyezik az adatainkat. A webes diagramszerkesztő egy jó példa erre, mivel pár percen belül már akár kollaboratívan dolgozhatunk egy diagramon távoli munkatársunkkal.
+
+A szakdolgozatom célja egy webes modellszerkesztő alkalmazás, ami alkalmas vizuális programozásra és kódgenerálásra és ezen felül kollaboratívan lehessen dolgozni benne. Ez a cél mellett a kiválasztott technológiákat is meg kellet ismernem és az elkészült alkalmazást teljesítmény szempontjából értékeltem.
+
+A Javascript reneszánszát éli napjainkban. Már rég nem csak arra való, hogy a böngészőben dinamikus layout-ot létrehozzunk, eljött az a pont, ahol kliens-, szerver- és adatbázis szinten -- idegen szóval -- \emph{full-stack} képességei vannak. A szakdolgozatom keretein belül meg akartam vizsgálni, hogy mennyire érett a technológia komplex webalkalmazások fejlesztésére. 
+
+Munkám eredménye egy kollaboratív diagramszerkesztő, amiben egy kódtranszformációs template-et is megadva tetszőleges nyelvű kódot lehet generálni, Javascript esetében ezt a kódot fel is lehet használni más rendszerben. A kiválasztott technológia alkalmas volt hatékony prototipizálásra, modularitásra és elegáns megoldások implementálására.  
+
 \vfill
 
 %----------------------------------------------------------------------------
@@ -11,6 +18,6 @@ Jelen dokumentum egy diplomaterv sablon, amely formai keretet ad a BME Villamosm
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-This document is a \LaTeX-based skeleton for BSc/MSc~theses of students at the Electrical Engineering and Informatics Faculty, Budapest University of Technology and Economics. The usage of this skeleton is optional. It has been tested with the \emph{TeXLive} \TeX~implementation, and it requires the PDF-\LaTeX~compiler.
+Ha jó a magyar, megírom az angolt.
 \vfill
 
